# iisaacbeats_audio_ini

./: .gitignore  CMakeLists.txt  PitchShiftEngine.cpp  PitchShiftEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Pupon_installer.iss  README.md  TapeWobble.cpp  TapeWobble.h  build_macos_installer.sh
cmake/patches/: rubberband-v4.0.0-resampler-quality.patch
